cmake_minimum_required(VERSION 3.10)
project(p2)

set(CMAKE_CXX_STANDARD 11)

add_executable(p2
        e2j.class
        e2j.java
        first_sets
        Makefile
        Parser.class
        Parser.java
        run
        run1
        runall
        Scan.class
        Scan.java
        t01.correct
        t01.e
        t01.output
        t02.correct
        t02.e
        t02.output
        t04.correct
        t04.e
        t04.output
        t05.correct
        t05.e
        t05.output
        t06.correct
        t06.e
        t06.output
        t07.correct
        t07.e
        t07.output
        t08.correct
        t08.e
        t08.output
        t09.correct
        t09.e
        t09.output
        t10.correct
        t10.e
        t10.output
        t11.correct
        t11.e
        t11.output
        t12.correct
        t12.e
        t12.output
        t14.correct
        t14.e
        t14.output
        t15.correct
        t15.e
        t15.output
        t16.correct
        t16.e
        t16.output
        t17.correct
        t17.e
        t17.output
        t18.correct
        t18.e
        t18.output
        t19.correct
        t19.e
        t19.output
        t20.correct
        t20.e
        t20.output
        t31.correct
        t31.e
        t31.output
        t32.correct
        t32.e
        t32.output
        t33.correct
        t33.e
        t33.output
        t37.correct
        t37.e
        t37.output
        t42.correct
        t42.e
        t42.output
        t43.correct
        t43.e
        t43.output
        t44.correct
        t44.e
        t44.output
        t45.correct
        t45.e
        t45.output
        t46.correct
        t46.e
        t46.output
        t47.correct
        t47.e
        t47.output
        t48.correct
        t48.e
        t48.output
        t49.correct
        t49.e
        t49.output
        TK.class
        TK.java
        Token.class
        Token.java)
